@@ -22,7 +22,7 @@ rf(n, df1, df2)
   \item{p}{vector of probabilities.}
   \item{n}{number of observations. If \code{length(n) > 1}, the length
     is taken to be the number required.}
-  \item{df1, df2}{degrees of freedom.}
+  \item{df1, df2}{degrees of freedom.  \code{Inf} is allowed.}
   \item{ncp}{non-centrality parameter.}
   \item{log, log.p}{logical; if TRUE, probabilities p are given as log(p).}
   \item{lower.tail}{logical; if TRUE (default), probabilities are
