@@ -35,15 +35,16 @@ double pf(double x, double n1, double n2, int lower_tail, int log_p)
 
     if (x <= 0.)
 	return R_DT_0;
+    if (!R_FINITE(n1) && !R_FINITE(n2)) /* both +Inf */
+	ML_ERR_return_NAN;
 
-    /* fudge the extreme DF cases -- pbeta doesn't do this well
+    /* move to pchisq for very large values - was 4e5 in 2.0.x */
 
-    if (n2 > 4e5)
+    if (n2 > 1e10)
 	return pchisq(x * n1, n1, lower_tail, log_p);
 
-    if (n1 > 4e5)
+    if (n1 > 1e10)
 	return pchisq(n2 / x , n2, !lower_tail, log_p); 
-    */
 
     x = pbeta(n2 / (n2 + n1 * x), n2 / 2.0, n1 / 2.0, !lower_tail, log_p);
 
